tests/specs/ecosystem/mtkruto/mtkruto/0_1_400.test
mtkruto/mtkruto/0.1.400
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'IDBValidKey'.
export function fixKey(key: readonly StorageKeyPart[]): IDBValidKey[] {
                                                        ~~~~~~~~~~~
    at file://<tmpdir>/storage/1_utilities.ts:17:57

TS2304 [ERROR]: Cannot find name 'IDBKeyRange'.
export function getPrefixKeyRange(prefix: any): IDBKeyRange {
                                                ~~~~~~~~~~~
    at file://<tmpdir>/storage/1_utilities.ts:23:49

TS2304 [ERROR]: Cannot find name 'IDBDatabase'.
  declare database: IDBDatabase | null;
                    ~~~~~~~~~~~
    at file://<tmpdir>/storage/2_storage_indexed_db.ts:25:21

TS2304 [ERROR]: Cannot find name 'IDBTransaction'.
  set(k: readonly StorageKeyPart[], v: unknown, tx_?: IDBTransaction): Promise<void> {
                                                      ~~~~~~~~~~~~~~
    at file://<tmpdir>/storage/2_storage_indexed_db.ts:41:55

TS2304 [ERROR]: Cannot find name 'IDBTransaction'.
  get<T>(k: readonly StorageKeyPart[], tx_?: IDBTransaction | null, fix?: boolean): Promise<T | null> {
                                             ~~~~~~~~~~~~~~
    at file://<tmpdir>/storage/2_storage_indexed_db.ts:44:46

TS2304 [ERROR]: Cannot find name 'IDBTransaction'.
  }, tx_?: IDBTransaction): AsyncGenerator<[readonly StorageKeyPart[], T]> {
           ~~~~~~~~~~~~~~
    at file://<tmpdir>/storage/2_storage_indexed_db.ts:50:12

Found 6 errors.

